Non-unified build fixes, early March 2022 edition https://bugs.webkit.org/show_bug.cgi?id=237420

Unreviewed non-unified build fixes.


Source/JavaScriptCore:

* llint/LLIntExceptions.h: Add forward declaration for WasmInstruction.

Source/WebCore:

* inspector/agents/InspectorDOMDebuggerAgent.h: Add forward declaration for ScriptExecutionContext.

Source/WebKit:

* UIProcess/API/APIDataTask.cpp: Add missing inclusion of DataReference.h, remove
"#pragma once" from non-header file.
* UIProcess/API/APIDataTaskClient.h: Add missing inclusion of DataReference.h.



Canonical link: https://commits.webkit.org/248019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290775 268f45cc-cd09-0410-ab3c-d52691b4dbfc